Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56535

cannot find protocol declaration for 'WebFrameLoadDelegate' in qtwebview on macOS 10.9

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.8.0 RC
    • 5.8.0 Beta
    • WebView
    • None
    • macOS
    • f1a168c492e445211e54d6108585e70c8ea55fbe

    Description

      https://codereview.qt-project.org/#/c/172600/
      http://testresults.qt.io/logs/qt/qtwebview/a136cc406c8f616092ce6c07bc7f4e8366f65d15/OSXOSX_10_09x86_64OSXOSX_10_09x86_64Clangqtci-osx-10.9-x86_64Release_NoFramework/ee517fff1afb3b4267d7a2d2bb922bca00e00441/buildlog.txt.gz

      qwebview_osx.mm:52:44: error: cannot find protocol declaration for 'WebFrameLoadDelegate'
       @interface QtFrameLoadDelegate : NSObject <WebFrameLoadDelegate> {
                                                  ^
       1 error generated.
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alexandru.croitor Alexandru Croitor
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes