src/webview/qwebview_osx.mm
@@ -38,7 +38,7 @@
 #include "qwebview_osx_p.h"
 #include "qwebviewloadrequest_p.h"
 
-
+#include <QtCore/qglobal.h>
 #include <QtCore/qstring.h>
 #include <QtCore/qvariant.h>
 
@@ -49,7 +49,14 @@ QT_BEGIN_NAMESPACE
 
 class QOsxWebViewPrivate;
 
-@interface QtFrameLoadDelegate : NSObject <WebFrameLoadDelegate> {
+#if QT_OSX_PLATFORM_SDK_EQUAL_OR_ABOVE(__MAC_10_11)
+#define QtFrameLoadDelegateProtocol <WebFrameLoadDelegate>
+#else
+// WebFrameLoadDelegate is an informal protocol in <= 10.10 SDK.
+#define QtFrameLoadDelegateProtocol
+#endif
+
+@interface QtFrameLoadDelegate : NSObject QtFrameLoadDelegateProtocol {
     QOsxWebViewPrivate *qtWebViewPrivate;
 }
 - (QtFrameLoadDelegate *)initWithQWebViewPrivate:(QOsxWebViewPrivate *)webViewPrivate;
